update varias cosas